# nr-analyzer

./: .coveragerc  .dockerignore  .env.example  .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile.slim  README.md  docker-compose.yml  manifest.example.yaml  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: design-reviewer.md  project-checker.md  test-reviewer.md
.github/workflows/: docker-publish.yml  python-test.yml
analyzer_tools/: batch.py  cli.py  config_utils.py  pipeline.py  registry.py  result_manifest.py
analyzer_tools/analysis/: __init__.py  assemble.py  aure_export.py  check_llm.py  create_model.py  model_from_aure.py  model_generator.py  partial_data_assessor.py  plan_data.py  result_assessor.py  run_fit.py  theta_offset.py
analyzer_tools/reduction/: __init__.py  reduction.py
analyzer_tools/skills/create-model/: SKILL.md
analyzer_tools/skills/data-organization/: SKILL.md
analyzer_tools/skills/distributable/: SKILL.md
analyzer_tools/skills/fitting/: SKILL.md
analyzer_tools/skills/models/: SKILL.md
analyzer_tools/skills/partial-assessment/: SKILL.md
analyzer_tools/skills/pipeline/: SKILL.md
analyzer_tools/skills/plan-data/: SKILL.md
analyzer_tools/skills/reflectometry-basics/: SKILL.md
analyzer_tools/skills/theta-offset/: SKILL.md
analyzer_tools/skills/tool-output/: SKILL.md
analyzer_tools/utils/: model_utils.py  summary_plots.py
docs/: configuration.md  docker.md  plan.md  workflow-vision.md
tests/: test_assemble.py  test_aure_export.py  test_batch.py  test_check_llm.py  test_cli.py  test_cli_args.py  test_config_utils.py  test_docs_no_stale_refs.py  test_model_from_aure.py  test_model_generator.py  test_partial_data_assessor.py  test_partial_data_assessor_structured.py  test_pipeline.py  test_reduction_partial_metadata.py  test_registry.py  test_result_assessor.py  test_result_assessor_aure.py  test_result_manifest.py  test_theta_offset_json.py
tests/sample_data/: REFL_218281_combined_data_auto.txt  REFL_218386_combined_data_auto.txt
tests/sample_data/partial/: REFL_218281_1_218281_partial.txt  REFL_218281_2_218282_partial.txt  REFL_218281_3_218283_partial.txt
